--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1620,9 +1620,9 @@
   "PLEASE_ENTER_VALID_ADJUSTMENT_VALUE": "Please enter a valid adjustment value",
   "PLEASE_ENTER_VALID_VALUE": "Please enter a valid value",
   
-  "PLEASE_CONFIRM_UPDATE": "Please confirm the update"
+  "PLEASE_CONFIRM_UPDATE": "Please confirm the update",
   
-
+"RECHARGEABLE_AMOUNT":"Rechargeable Amount"
 
 
 }
