--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1622,7 +1622,7 @@
   
   "PLEASE_CONFIRM_UPDATE": "Please confirm the update",
   
-"RECHARGEABLE_AMOUNT":"Rechargeable Amount"
+"RECHARGEABLE_ACCOUNT":"Rechargeable Account"
 
 
 }
