--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -1616,7 +1616,7 @@
     "PLEASE_ENTER_VALID_VALUE": "لطفاً یک مقدار معتبر وارد کنید",
     "PLEASE_CONFIRM_UPDATE": "لطفاً به‌روزرسانی را تأیید کنید",
 
-         "RECHARGEABLE_AMOUNT": "مبلغ قابل شارژ"
+    "RECHARGEABLE_ACCOUNT": "حساب قابل شارژ"
 
 
 }
