--- a/public/locales/ps.json
+++ b/public/locales/ps.json
@@ -1616,6 +1616,6 @@
     "PLEASE_ENTER_VALID_ADJUSTMENT_VALUE": "مهرباني وکړئ یو معتبر د بدلون مقدار دننه کړئ",
     "PLEASE_ENTER_VALID_VALUE": "مهرباني وکړئ یو معتبر مقدار دننه کړئ",
     "PLEASE_CONFIRM_UPDATE": "مهرباني وکړئ تازه کول تایید کړئ",
-        "RECHARGEABLE_AMOUNT": "د بیا چارج کېدونکي مقدار"
+    "RECHARGEABLE_ACCOUNT": "د بیا چارج کېدونکی حساب"
 
 }
