--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -1616,7 +1616,10 @@
     "PLEASE_ENTER_VALID_VALUE": "لطفاً یک مقدار معتبر وارد کنید",
     "PLEASE_CONFIRM_UPDATE": "لطفاً به‌روزرسانی را تأیید کنید",
 
-    "RECHARGEABLE_ACCOUNT": "حساب قابل شارژ"
+    "RECHARGEABLE_ACCOUNT": "حساب قابل شارژ",
+    "TRANSACTION_STATUS": "وضعیت تراکنش",
+  "TRANSACTION_HAS_NOT_BEEN_CREATED": "تراکنش ایجاد نشده است",
+  "TRANSACTION_HAS_BEEN_CREATED": "تراکنش ایجاد شده است"
 
 
 }
